[package]
name = "hey-yew-guys"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.19"
wasm-logger = "0.2.0"
wasm-bindgen = "0.2"
yew = { version = "0.20", features = ["csr"] }
js-sys = "0.3.64"

[dependencies.web-sys]
version = "0.3"
features = [
  'HtmlCanvasElement',
  'WebGlBuffer',
  'WebGlProgram',
  'WebGlRenderingContext',
  'WebGlShader',
  'WebGlUniformLocation',
]
