[package]
name = "port2"
version = "0.1.0"
edition = "2021"

[dependencies]
wasm-bindgen = "0.2.87"
yew = { version = "0.20", features = ["csr"] }
yew-router = "0.17.0"
stylist = { version = "0.11", features = ["yew_integration", "parser"] }
js-sys = "0.3"
log = "0.4.19"
wasm-logger = "0.2.0"

[dependencies.web-sys]
version = "0.3.64"
features = [
  'HtmlCanvasElement',
  'WebGlBuffer',
  'WebGlProgram',
  'WebGl2RenderingContext',
  'WebGlShader',
  'WebGlUniformLocation',
]
